@@ -6,6 +6,9 @@ Release 2.8.0 - UNRELEASED
 
   NEW FEATURES
 
+    YARN-3249. Add a 'kill application' button to Resource Manager's Web UI.
+    (Ryu Kobayashi via ozawa)
+
   IMPROVEMENTS
 
     YARN-3230. Clarify application states on the web UI. (Jian He via wangda)
